jvm中增加java指令手册及jvisualvm的使用